--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,5 @@ jobs:
       - name: Install surge
         run: npm install -g surge
       - name : Run surge
-        run: surge ./bootcampdeploy.surge.sh --token ${{secret.SURGE_TOKEN}}       
+        run: surge ./bootcampdeploy.surge.sh --token ${{secretS.SURGE_TOKEN}}       
         
